fix - correct gap between input range difficulty and label

--- a/src/components/Range/Range.scss
+++ b/src/components/Range/Range.scss
@@ -5,6 +5,7 @@
   margin-bottom: 1em;
   justify-content: space-between;
   align-items: center;
+  gap: 1em;
 }
 
 input[type=range] {
